# warden

./: .gitignore  .gitmodules  Makefile  README.md  REVIEWERS  ambiata-warden.cabal  ambiata-warden.lock-7.10.2  ambiata-warden.lock-7.8.4  boris-git.toml  boris.toml  mafia  master.toml  warden.cabal  warden.submodules
bench/: bench.hs  herbie.rkt
cbits/: field.c  field.h  pii.c  pii.h  predicates.h  row.c  row.h  warden.h
doc/: 000-header.md  010-inference.md  011-numerics.md  Makefile  inference.md  old-configuration.md  performance.md  vapour-validate.sh  warden.bib  warden.tex
doc/notes/: 2017-04-19_anomaly-detection.md
main/: warden-anomalies.hs  warden-gen.hs  warden-numerics.hs  warden-sample.hs  warden.hs
src/: Warden.hs
src/Warden/: Check.hs  Chunk.hs  Commands.hs  Data.hs  Debug.hs  Error.hs  Fold.hs  IO.hs  Inference.hs  Marker.hs  Numeric.hs  PII.hs  Param.hs  Random.hs  Row.hs  Rows.hs  Schema.hs  View.hs
src/Warden/Anomaly/: Data.hs  KDTree.hs  Metric.hs
src/Warden/Check/: File.hs  Row.hs
src/Warden/Commands/: Sample.hs
src/Warden/Data/: Check.hs  Chunk.hs  Field.hs  FieldAnomaly.hs  Inference.hs  Marker.hs  Numeric.hs  PII.hs  Param.hs  Poset.hs  Row.hs  Sampling.hs  Schema.hs  SeparatedValues.hs  TextCounts.hs  View.hs
src/Warden/Data/Sampling/: Reservoir.hs
src/Warden/Parser/: Common.hs  Field.hs  PII.hs  Row.hs
src/Warden/Parser/Row/: DelimitedText.hs  RFC4180.hs
src/Warden/Row/: Internal.hs  Parser.hs
src/Warden/Sampling/: Reservoir.hs
src/Warden/Serial/: Json.hs
src/Warden/Serial/Json/: Check.hs  Common.hs  Field.hs  Marker.hs  Numeric.hs  PII.hs  Param.hs  Row.hs  Schema.hs  TextCounts.hs  View.hs
test/: test-cli.hs  test-io.hs  test.hs
test/Test/: Warden.hs
test/Test/IO/: Warden.hs
test/Test/IO/Warden/: Check.hs  Chunk.hs  Commands.hs  IO.hs  Marker.hs  Random.hs  Row.hs  Rows.hs  Schema.hs  View.hs
test/Test/IO/Warden/Check/: File.hs
test/Test/IO/Warden/Commands/: Sample.hs
test/Test/IO/Warden/Commands/Check/: Unit.hs
test/Test/IO/Warden/Sampling/: Reservoir.hs
test/Test/IO/Warden/Serial/Json/Marker/: Unit.hs
test/Test/IO/Warden/View/: Unit.hs
test/Test/Numeric/Warden/: Gen.hs  Simulate.hs
test/Test/Warden/: Arbitrary.hs  Data.hs  Fold.hs  Inference.hs  Numeric.hs  PII.hs  Row.hs
test/Test/Warden/Anomaly/: KDTree.hs  Metric.hs
test/Test/Warden/Commands/: Sample.hs
test/Test/Warden/Data/: Check.hs  Field.hs  FieldAnomaly.hs  Marker.hs  Numeric.hs  Row.hs  Schema.hs  TextCounts.hs  View.hs
test/Test/Warden/Data/Poset/: Laws.hs
test/Test/Warden/Parser/: Common.hs  Field.hs  PII.hs  Row.hs
test/Test/Warden/Parser/Row/: DelimitedText.hs  RFC4180.hs
test/Test/Warden/Row/: Internal.hs  Parser.hs
test/Test/Warden/Sampling/: Reservoir.hs
test/Test/Warden/Serial/Json/: Marker.hs  Numeric.hs  Schema.hs
test/cli/basic-usage/: run
test/cli/basic-usage-sample/: run
test/cli/check/: run
test/cli/core/: setup.sh
test/cli/validate-schema/: run
test/data/commands/check/: schema-field-type.json
test/data/commands/check/bad-rows/year=2016/month=03/day=24/: bad-rows-failure
test/data/commands/check/field-counts/year=2016/month=03/day=24/: field-counts-failure
test/data/commands/check/pii-email/year=2016/month=03/day=24/: pii-failure
test/data/commands/check/pii-phone/year=2016/month=03/day=24/: pii-failure
test/data/commands/check/schema-field-type/year=2016/month=03/day=24/: field-type-mismatch
test/data/schema/: invalid_schema.json  valid_schema.json
test/data/serial/json/marker/: file_marker_v1.json  file_marker_v2.json  file_marker_v3.json  file_marker_v4.json  view_marker_v1.json  view_marker_v2.json  view_marker_v3.json  view_marker_v4.json
