name:                  ambiata-warden
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              warden
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           warden.

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           == 0.8.*
                     , ambiata-delorean
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-x-attoparsec
                     , ambiata-x-eithert
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , foldl                           == 1.1.*
                     , lens
                     , pipes                           == 4.1.*
                     , pipes-bytestring                == 2.1.*
                     , pipes-csv                       == 1.4.*
                     , semigroups                      >= 0.16 && < 0.19
                     , statistics                      == 0.13.2.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3 && < 5
                     , unix                            == 2.7.*
                     , vector                          == 0.10.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src gen


  exposed-modules:
                       BuildInfo_ambiata_warden
                       Warden
                       Warden.Check.File
                       Warden.Check.Row
                       Warden.Commands
                       Warden.Data
                       Warden.Data.Check
                       Warden.Data.Marker
                       Warden.Data.Numeric
                       Warden.Data.SeparatedValues
                       Warden.Data.View
                       Warden.Error
                       Warden.Numeric
                       Warden.Rows
                       Warden.Sampling.Reservoir
                       Warden.Serial.Json
                       Warden.Serial.Json.Numeric
                       Warden.View

executable             warden
    ghc-options:       -Wall -threaded -O2 -with-rtsopts=-N
    main-is:           main/warden.hs
    build-depends:     base
                     , ambiata-p
                     , ambiata-warden
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , optparse-applicative            == 0.11.*
                     , semigroups
                     , text

executable             warden-gen
    ghc-options:       -Wall -threaded -O2 -with-rtsopts=-N
    main-is:           warden-gen.hs
    hs-source-dirs:    main
                     , test
    build-depends:     base
                     , QuickCheck                      == 2.7.*
                     , ambiata-delorean
                     , ambiata-delorean-test
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-warden
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , async                           == 2.0.*
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , lens                            == 4.9.*
                     , optparse-applicative            == 0.11.*
                     , pipes                           == 4.1.*
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , temporary                       == 1.2.*
                     , text
                     , unix                            == 2.7.*
                     , vector                          == 0.10.*

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.7.*
                     , aeson                           == 0.8.*
                     , ambiata-delorean
                     , ambiata-delorean-test
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-warden
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , lens                            == 4.9.*
                     , pipes                           == 4.1.*
                     , semigroups
                     , quickcheck-instances            == 0.3.*
                     , temporary                       == 1.2.*
                     , text
                     , vector                          == 0.10.*

test-suite test-io
    type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.7.*
                     , ambiata-delorean
                     , ambiata-delorean-test
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-warden
                     , ambiata-x-eithert
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , directory
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , pipes                           == 4.1.*
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , temporary
                     , text                            == 1.2.*
                     , transformers                    >= 0.3 && < 5
                     , unix                            == 2.7.*
                     , vector                          == 0.10.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-warden
                    , ambiata-disorder-core
