name:                  ambiata-warden
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              warden
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           warden.

library
  build-depends:
                       base                            >= 3          && < 5
                     , aeson                           == 0.8.*
                     , aeson-pretty                    == 0.7.2.*
                     , ambiata-debruijn
                     , ambiata-delorean
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-parsley
                     , ambiata-x-attoparsec
                     , ambiata-x-conduit
                     , ambiata-x-eithert
                     , async                           >= 2.0 && <= 2.1.0
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     -- Changing the cityhash bound may break TextCount
                     -- combination on view markers if it involves a change
                     -- in the underlying C library. That doesn't mean you
                     -- can't do it, but think about it first.
                     , cityhash                        == 0.3.0.1
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , containers                      == 0.5.*
                     , deepseq                         >= 1.3 && < 1.5
                     , deepseq-generics                == 0.2.0.*
                     , directory                       >= 1.2.2 && < 1.3
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , foldl                           == 1.1.*
                     , ieee754                         == 0.7.*
                     , lens                            == 4.9.*
                     , lifted-async                    >= 0.5 && < 0.9
                     , lifted-base                     < 0.2.3.7
                     , mwc-random                      == 0.13.*
                     , primitive                       == 0.6.*
                     , resourcet                       == 1.1.*
                     , semigroups                      >= 0.16 && < 0.19
                     , text                            == 1.2.*
                     , tz                              == 0.1.0.*
                     , transformers                    >= 0.3 && < 5
                     , unix                            >= 2.7.1 && < 2.7.3
                     , vector                          == 0.10.*
                     , vector-algorithms               == 0.7.*
                     , vector-th-unbox                 == 0.2.1.*


  ghc-options:
                       -Wall

  cc-options:
                       -O3
                       -Wall
                       -Werror
                       -Wbad-function-cast
                       -Wnested-externs
                       -Wstrict-prototypes
                       -Wmissing-prototypes
                       -Wmissing-declarations
                       -Waggregate-return
          
  hs-source-dirs:
                       src gen


  exposed-modules:
                       BuildInfo_ambiata_warden
                       DependencyInfo_ambiata_warden
                       Warden
                       Warden.Check
                       Warden.Check.File
                       Warden.Check.Row
                       Warden.Chunk
                       Warden.Commands
                       Warden.Data
                       Warden.Data.Check
                       Warden.Data.Chunk
                       Warden.Data.Field
                       Warden.Data.FieldAnomaly
                       Warden.Data.Inference
                       Warden.Data.Marker
                       Warden.Data.Numeric
                       Warden.Data.Param
                       Warden.Data.PII
                       Warden.Data.Poset
                       Warden.Data.Row
                       Warden.Data.Sampling
                       Warden.Data.Sampling.Reservoir
                       Warden.Data.Schema
                       Warden.Data.TextCounts
                       Warden.Data.View
                       Warden.Debug
                       Warden.Error
                       Warden.Inference
                       Warden.Marker
                       Warden.Numeric
                       Warden.Param
                       Warden.Parser.Common
                       Warden.Parser.Field
                       Warden.Parser.PII
                       Warden.Parser.Row
                       Warden.Parser.Row.DelimitedText
                       Warden.Parser.Row.RFC4180
                       Warden.PII
                       Warden.Row
                       Warden.Row.Internal
                       Warden.Sampling.Reservoir
                       Warden.Schema
                       Warden.Serial.Json
                       Warden.Serial.Json.Check
                       Warden.Serial.Json.Common
                       Warden.Serial.Json.Field
                       Warden.Serial.Json.Marker
                       Warden.Serial.Json.Numeric
                       Warden.Serial.Json.Param
                       Warden.Serial.Json.PII
                       Warden.Serial.Json.Row
                       Warden.Serial.Json.Schema
                       Warden.Serial.Json.TextCounts
                       Warden.Serial.Json.View
                       Warden.View

  c-sources:           cbits/field.c
                       cbits/pii.c
                       cbits/row.c
  include-dirs:        cbits
  includes:            field.h
                       pii.h
                       predicates.h
                       row.h
                       warden.h

executable             warden
    ghc-options:       -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    main-is:           main/warden.hs
    build-depends:     base
                     , ambiata-p
                     , ambiata-warden
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , optparse-applicative            == 0.11.*
                     , resourcet                       == 1.1.*
                     , semigroups
                     , text

executable             warden-gen
    ghc-options:       -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    main-is:           warden-gen.hs
    hs-source-dirs:    main
                     , test
    build-depends:     base
                     , QuickCheck                      == 2.8.*
                     , ambiata-debruijn
                     , ambiata-delorean
                     , ambiata-delorean-test
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-warden
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , async                           >= 2.0 && <= 2.1.0
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , lens                            == 4.9.*
                     , optparse-applicative            == 0.11.*
                     , quickcheck-instances            == 0.3.*
                     , resourcet                       == 1.1.*
                     , semigroups
                     , temporary                       == 1.2.*
                     , text
                     , time                            == 1.5.*
                     , transformers                    >= 0.3 && < 5
                     , unix                            >= 2.7.1 && < 2.7.3
                     , vector                          == 0.10.*

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.8.*
                     , aeson                           == 0.8.*
                     , ambiata-debruijn
                     , ambiata-delorean
                     , ambiata-delorean-test
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-warden
                     , attoparsec                      == 0.12.*
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , deepseq                         >= 1.3 && < 1.5
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , lens                            == 4.9.*
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , temporary                       == 1.2.*
                     , text
                     , time                            == 1.5.*
                     , vector                          == 0.10.*

test-suite test-io
    type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.8.*
                     , ambiata-debruijn
                     , ambiata-delorean
                     , ambiata-delorean-test
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-tine
                     , ambiata-warden
                     , ambiata-x-conduit
                     , ambiata-x-eithert
                     , async                           >= 2.0 && <= 2.1.0
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , containers                      == 0.5.*
                     , deepseq                         >= 1.3 && < 1.5
                     , directory
                     , either                          == 4.3.*
                     , entropy                         == 0.3.7.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , lens                            == 4.9.*
                     , quickcheck-instances            == 0.3.*
                     , mwc-random                      == 0.13.*
                     , process                         >= 1.2 && <= 1.4.2
                     , resourcet                       == 1.1.*
                     , semigroups
                     , temporary
                     , text                            == 1.2.*
                     , time                            == 1.5.*
                     , transformers                    >= 0.3 && < 5
                     , unix                            >= 2.7.1 && < 2.7.3
                     , vector                          == 0.10.*
                     , vector-algorithms               == 0.7.*

benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2 -with-rtsopts=-N

  hs-source-dirs:
                       test, bench

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.8.*
                     , ambiata-debruijn
                     , ambiata-delorean
                     , ambiata-delorean-test
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-lane
                     , ambiata-p
                     , ambiata-warden
                     , ambiata-x-eithert
                     , async                           >= 2.0 && <= 2.1.0
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , conduit                         == 1.2.*
                     , conduit-extra                   == 1.1.*
                     , criterion                       == 1.1.*
                     , deepseq                         >= 1.3 && < 1.5
                     , directory
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , ieee754                         == 0.7.*
                     , mwc-random                      == 0.13.*
                     , primitive                       == 0.6.*
                     , quickcheck-instances            == 0.3.*
                     , resourcet                       == 1.1.*
                     , semigroups
                     , temporary
                     , text                            == 1.2.*
                     , time                            == 1.5.*
                     , transformers                    >= 0.3 && < 5
                     , unix                            >= 2.7.1 && < 2.7.3
                     , vector                          == 0.10.*


test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-warden
                    , ambiata-disorder-core
