name:                  warden
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              warden
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           warden.

library
  build-depends:
                       base                            >= 3          && < 5
                     , attoparsec                      == 0.12.*
                     , bifunctors                      >= 4 && < 6
                     , bytestring                      == 0.10.*
                     , cassava                         == 0.4.*
                     , containers                      == 0.5.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , filepath                        == 1.3.*
                     , lens                            == 4.12.*
                     , p
                     , pipes                           == 4.1.*
                     , pipes-bytestring                == 2.1.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3 && < 5
                     , vector                          == 0.11.*


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_warden
                       Warden
                       Warden.Data
                       Warden.Error
                       Warden.IO


executable             warden
    ghc-options:       -Wall -threaded -O2
    main-is:           main/warden.hs
    build-depends:     base
                     , warden
                     , optparse-applicative            == 0.11.*
                     , text
                     , x-optparse

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , disorder-corpus
                     , p
                     , text
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , warden

test-suite test-io
    type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , disorder-corpus
                     , p
                     , text
                     , either                          == 4.3.*
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , warden
                     , disorder-core
                     , cassava                         == 0.4.*
                     , bytestring                      == 0.10.*
                     , filepath                        == 1.3.*
                     , pipes                           == 4.1.*
                     , temporary
                     , text                            == 1.2.*
                     , transformers                    >= 0.3 && < 5
                     , vector                          == 0.11.*
